# Cosmgrid-Agent

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md
.claude/: CLAUDE.md  launch.json
.github/workflows/: app-quality.yml
.workbuddy/memory/: 2026-07-15.md
app/: .dependency-cruiser.cjs  .npmrc  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vite_ssr_debug.mjs  vite_ssr_final_verify.mjs  vite_ssr_test.mjs  vite_ssr_test2.mjs  vite_ssr_test3.mjs  vite_ssr_test4.mjs  vite_ssr_test5.mjs  vite_ssr_test6.mjs  vite_ssr_test7.mjs  vite_ssr_test_civite.mjs  vite_ssr_test_final.mjs  vite_ssr_test_lang.mjs  vite_ssr_test_suspense.mjs  vite_ssr_verify.mjs  vitest.config.ts
app/.husky/: pre-commit
app/scripts/: probe-rate-limit-errors.ts  run-eval.ts
app/src/: App.tsx  index.css  main.tsx
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/.cargo/: config.toml
app/src-tauri/capabilities/: default.json  render.json
app/src-tauri/icons/: icon.icns
app/src-tauri/permissions/autogenerated/: fetch_url_backend.toml  fetch_url_rendered.toml  git_commit_file.toml  git_read.toml  grant_workspace_fs_access.toml  init_shadow_git_repo.toml  kill_cli.toml  kill_rpc_process.toml  report_rendered_page.toml  resolve_cli_program.toml  resolve_realpath.toml  run_shell_args.toml  set_menu_language.toml  spawn_cli_stream.toml  spawn_rpc_process.toml  write_rpc_stdin.toml
app/src-tauri/src/: lib.rs  process.rs  security.rs
app/src-tauri/src/commands/: cli.rs  fetch.rs  keychain.rs  menu.rs  mod.rs  rpc.rs  shell.rs
app/src/components/: ThinkingLogo.tsx
app/src/components/chat/: ChainProgressBar.tsx  HandoffBanner.tsx  HandoffStepCard.tsx  MarkdownText.tsx  ToolCallCard.tsx  WorkingStatusBar.tsx
app/src/components/project-detail/: CheckpointDialogs.tsx  HandoffDialogs.tsx  MemoryDialogs.tsx  project-detail-utils.ts
app/src/components/providers/: AddProviderDialog.tsx  ApiKeyInput.tsx  BasicFormFields.tsx  ModelConfigFields.tsx  ProviderEditDialog.tsx  ProviderTypeSelect.tsx  TestConnectionButton.tsx  WorkRoleSelector.tsx  provider-form-defaults.ts
app/src/components/ui/: dropdown-menu.tsx  (+3 more)
app/src/i18n/: index.ts
app/src/lib/: api.ts  app-close.ts  app-settings.ts  db-migrations.ts  db.ts  keystore.ts  model-capabilities.ts  parse-thinking.ts  roles.ts  schemas.ts  security-invariants.ts  templates.ts  theme.ts  utils.ts  work-artifact-views.ts  work-artifacts.ts
app/src/pages/: CHAT_PAGE_REFACTOR_PLAN.md  ChatPage.tsx  DebatePage.tsx  OnboardingModal.tsx  ProjectDetailPage.tsx  ProjectsPage.tsx  ProvidersPage.tsx  SettingsPage.tsx  StatsPage.tsx  TemplatesPage.tsx  TokenPlansPage.tsx  UsageMonitorPage.tsx
docs/: 验证-fallback链路.md
项目文档/: Cosmgrid-Agent-v0.7-v0.9-诚实审查报告-2026-06-22.md  Cosmgrid-Agent-改进增强方案-2026-06-22.md  v0.2-质量审查-Altitude-2026-06-19.md  v0.2-质量审查-Efficiency-2026-06-19.md  v0.2-质量审查-Reuse-2026-06-19.md  v0.2-质量审查-Simplification-2026-06-19.md  专家评审-前端工程-2026-06-19.md  专家评审-安全专家-2026-06-19.md  专家评审-新技术研究-2026-06-19.md  技术侦察-CC-Switch-添加供应商-UI-2026-06-18.md  技术侦察-OpenCode-Vercel-AI-SDK-包装-2026-06-18.md
(+619 files in other folders)
