[package]
name = "cosmgrid-agent"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "4.1.2"
# 1.3 修复：spawn_cli_stream 加 per-event 静默超时（tokio::select! + tokio::time::sleep）
# 2026-07-05 新增 "sync"：fetch_url_rendered 用 oneshot channel 把隐藏窗口渲染完的内容传回来
tokio = { version = "1", features = ["time", "sync"] }
# 2026-07-05 新增：web_fetch 工具改走后端发请求（不经过 webview 的 fetch），绕开 CORS——
# 见 fetch_url_backend 注释。
reqwest = { version = "0.13", default-features = false, features = ["rustls", "gzip"] }
