[package]
name = "cosmgrid-agent"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "4.1.2"
# 1.3 修复：spawn_cli_stream 加 per-event 静默超时（tokio::select! + tokio::time::sleep）
# 2026-07-05 新增 "sync"：fetch_url_rendered 用 oneshot channel 把隐藏窗口渲染完的内容传回来
tokio = { version = "1", features = ["time", "sync", "process", "io-util"] }
# 2026-07-05 新增：web_fetch 工具改走后端发请求（不经过 webview 的 fetch），绕开 CORS——
# 见 fetch_url_backend 注释。
# 2026-07-08 新增 "system-proxy"：default-features=false 关掉了 reqwest 默认带的 system-proxy，
# 导致 Tier 1 只认 HTTP_PROXY/HTTPS_PROXY 环境变量，读不到 macOS「系统设置→网络→代理」面板
# 里的代理（Clash/Surge 系统代理模式往那写）。GUI 进程又不继承 shell 里 export 的代理变量，
# 结果 fetch_url_backend 裸连被墙、等满超时。加回这个特性后 reqwest 会读系统代理配置。
reqwest = { version = "0.13", default-features = false, features = ["rustls", "gzip", "system-proxy"] }
